# compilation-optimization

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_exec.sh  build_init.sh
lib/: CMakeLists.txt
lib/build_load_lib/: CMakeLists.txt  LibSources.cmake  build_init.sh  generate.py
lib/miniz_wrapper/: CMakeLists.txt
lib/miniz_wrapper/include/: string_ops.h
lib/miniz_wrapper/src/: string_ops.cpp
src/: build_load.cpp  build_load.h  main.cpp
test/src/: test.cpp
